# seratosync

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  sync_serato.sh
src/seratosync/: backup.py  main.py  metadata_sync.py
